<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_your"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:background="@color/text_color_blue"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:padding="8dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_minutes"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/clickBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="12dp"
        />

    <TextView
        android:id="@+id/selectedAgeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12_02_1890"
        android:padding="10dp"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date_text_view"
        android:padding="8dp"
        android:textColor="@color/blue"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/_875643789"
        android:padding="10dp"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        android:padding="8dp"
        android:textColor="@color/blue"
        android:textSize="16sp"
        />

</LinearLayout>